Adicionado os endpoints para Friends
