# routes/api.php
@@ -33,16 +33,24 @@ Route::group(['middleware'=>'cors'], function(){
     Route::group(['middleware'=>'jwt.auth'], function(){
         Route::get('myself', 'Api\UserController@myself');
 
+        /* Search */
         Route::get('/search', 'Api\SearchController@results')->name('api.search.results');
 
+        /* Users */
         Route::resource('users', 'Api\UserController');
         Route::get('users/{email}/status', 'Api\UserController@getStatus')->name('api.users.getstatus');
-
+        
+        /* Friends */
         Route::get('friends', 'Api\FriendController@index')->name('api.friends.index');
+        Route::get('friends/add/{email}', 'Api\FriendController@getAdd')->name('api.friends.add');
+        Route::get('friends/accept/{email}', 'Api\FriendController@getAdd')->name('api.friends.accept');
+        Route::post('friends/leavefriendship/{email}', 'Api\FriendController@getAdd')->name('api.friends.leave');
 
+        /* Places */
         Route::get('places', 'Api\PlaceController@index')->name('api.places.index');
         Route::get('/places/show', 'Api\PlaceController@show')->name('api.place.show');
 
+        /* Routes */
         Route::get('routes', 'Api\RouteController@index')->name('api.routes.index');
         Route::get('/routes/show/{id}', 'Api\RouteController@show')->name('api.route.show');
 
